public class MadnessOutOfRange extends RuntimeException{
    MadnessOutOfRange(){
        super("YOU DIED");
    }
}
