public interface dosmth {
        void usable(String a);
}
